--- a/xh-admin/xh-admin-biz/src/main/resources/template/controller.java.vm
+++ b/xh-admin/xh-admin-biz/src/main/resources/template/controller.java.vm
@@ -1,30 +1,17 @@
 package ${package.Controller};
 
-
-import com.poi.code.creator.service.${table.serviceName} ;
-
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
-import lombok.extern.slf4j.Slf4j;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.bind.annotation.RequestBody;
-
-import com.poi.code.creator.vo.base.ApiResp;;
+import java.util.List;
+import javax.annotation.Resource;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 import ${package.Service}.${table.serviceName};
 import ${package.Entity}.${entity};
-import com.poi.code.creator.vo.base.req.BaseReq;
-import com.poi.code.creator.vo.req.Add${entity}Req;
-import com.poi.code.creator.vo.req.Update${entity}Req;
-import com.poi.code.creator.vo.req.List${entity}Req;
-import com.poi.code.creator.vo.req.Page${entity}Req;
 
 /**
 * @author ${author}
@@ -33,10 +20,9 @@ import com.poi.code.creator.vo.req.Page${entity}Req;
 @Api("$!{table.comment}" )
 @RestController
 @RequestMapping("/#if(${controllerMappingHyphenStyle})${controllerMappingHyphen}#else${table.entityPath}#end" )
-@Slf4j
 public class ${table.controllerName}  {
 
-  @Autowired
+  @Resource
   private ${table.serviceName}  ${table.entityPath}Service;
 
   @ApiOperation("列表" )
